k8s/deployments/predict-deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: predict-ingress
  namespace: mlflow-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: predict.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: predict
                port:
                  number: 8080
